--- a/form-pemasaran.html
+++ b/form-pemasaran.html
@@ -188,6 +188,7 @@
                                     <div class="form-group">
                                         <label for="sell-select-item-type">Item Types : </label>
                                         <select id="sell-select-item-type" class="custom-select form-control">
+                                            <option value="">Choose Type</option>
                                             <option value="Seng Kaki">Seng Kaki (762)</option>
                                             <option value="Seng Lebar">Seng Lebar (914)</option>
                                             <option value="Spandeck">Spandeck</option>
@@ -339,8 +340,11 @@
 <script src="vendors/scripts/steps-setting.js"></script>
 
 <script src="js/myjs/form/date-helper.js"></script>
+<script src="js/myjs/api/api-helper.js"></script>
+<script src="js/myjs/form/validation-helper.js"></script>
 <script src="js/myjs/form/validate-sell-form.js"></script>
 <script src="js/myjs/form/selling-form.js"></script>
+
 
 </body>
 
