--- a/dashboard_produksi.html
+++ b/dashboard_produksi.html
@@ -175,7 +175,7 @@
 <script src="src/plugins/jQuery-Knob-master/jquery.knob.min.js"></script>
 <script src="vendors/scripts/knob-chart-setting.js"></script>
 <script src="src/plugins/highcharts-6.0.7/code/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-3d.js"></script>
+<!--<script src="https://code.highcharts.com/highcharts-3d.js"></script>-->
 <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
 <script src="vendors/scripts/highchart2-setting.js"></script>
 
