17th Commit - Total Production Chart Stable
1. Load Total Production Data via REST End-point: /production/monthly/all/{strYearAndMonth}
2. api-helper.js Method Updated -> testConnectionFailure()
3. Do not load chart data in case of test connection failure.

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_produksi.html
+++ b/dashboard_produksi.html
@@ -179,6 +179,8 @@
 <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
 <script src="vendors/scripts/highchart2-setting.js"></script>
 
+<script src="js/myjs/api/api-helper.js"></script>
+
 </body>
 
 </html>
