21st Commit - Refactor Production Control Form
Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_pemasaran.html
+++ b/dashboard_pemasaran.html
@@ -92,7 +92,7 @@
 							<li><a href="dashboard_produksi.html">Production Dashboard</a></li>
 							<li><a href="form-produksi.html">Production Form</a></li>
 							<li><a href="form-corrugation.html">Corrugation Form</a></li>
-							<li><a href="production_manager.html">Production Control</a></li>
+							<li><a href="production-control.html">Production Control</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
