--- a/dashboard_produksi.html
+++ b/dashboard_produksi.html
@@ -93,7 +93,7 @@
                         <li><a href="dashboard_produksi.html">Production Dashboard</a></li>
                         <li><a href="form-produksi.html">Production Form</a></li>
                         <li><a href="form-corrugation.html">Corrugation Form</a></li>
-                        <li><a href="production_manager.html">Production Control</a></li>
+                        <li><a href="production-control.html">Production Control</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -164,9 +164,7 @@
 
 <script src="vendors/scripts/core.js"></script>
 <script src="vendors/scripts/script.min.js"></script>
-<script src="vendors/scripts/process.js"></script>
 <script src="vendors/scripts/layout-settings.js"></script>
-<script src="src/plugins/apexcharts/apexcharts.min.js"></script>
 <script src="src/plugins/datatables/js/jquery.dataTables.min.js"></script>
 <script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
 <script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
@@ -177,7 +175,12 @@
 <!--<script src="https://code.highcharts.com/highcharts-3d.js"></script>-->
 <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
 <script src="vendors/scripts/highchart2-setting.js"></script>
-<script src="vendors/scripts/apexcharts2-setting.js"></script>
+
+<!-- Apex JS -->
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="js/myjs/chart/prod-dashboard-charts.js"></script>
+<!--<script src="src/plugins/apexcharts/apexcharts.min.js"></script>-->
+<!--<script src="vendors/scripts/apexcharts2-setting.js"></script>-->
 
 <script src="js/myjs/api/api-helper.js"></script>
 
