23rd Commit - Production Dashboard Ready
1. Load & Initialize Chart 3 - Total Production Against Production Target

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_produksi.html
+++ b/dashboard_produksi.html
@@ -174,7 +174,7 @@
 <script src="src/plugins/highcharts-6.0.7/code/highcharts.js"></script>
 <!--<script src="https://code.highcharts.com/highcharts-3d.js"></script>-->
 <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
-<script src="vendors/scripts/highchart2-setting.js"></script>
+<!--<script src="vendors/scripts/highchart2-setting.js"></script>-->
 
 <!-- Apex JS -->
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
