24th Commit - Production Control - Target Already Exists
1. On submitting the target, if the target for the given month & year already exists then show error pop up.

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/production-control.html
+++ b/production-control.html
@@ -489,7 +489,25 @@
                     </div>
                 </div>
             </div>
-            <!-- Failure Popup html End -->
+
+            <!-- Target Already Exists Popup html Start -->
+            <div class="modal fade" id="target-already-exists-modal" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body text-center font-18">
+                            <h3 class="mb-20">Connection Timed Out.</h3>
+                            <div class="mb-30 text-center"><img src="vendors/images/cross.png" alt="cross img.">
+                            </div>
+                            <p>Error: Target for the given Month & Year Already Exists.</p>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Target Already Exists Popup html End -->
 
         </div>
     </div>
