--- a/production-control.html
+++ b/production-control.html
@@ -185,15 +185,15 @@
                                                                 <label for="prod-control-select-month">Month : </label>
                                                                 <select id="prod-control-select-month"
                                                                         class="custom-select form-control">
-                                                                    <option value="1">January</option>
-                                                                    <option value="2">February</option>
-                                                                    <option value="3">March</option>
-                                                                    <option value="4">April</option>
-                                                                    <option value="5">May</option>
-                                                                    <option value="6">June</option>
-                                                                    <option value="7">July</option>
-                                                                    <option value="8">August</option>
-                                                                    <option value="9">September</option>
+                                                                    <option value="01">January</option>
+                                                                    <option value="02">February</option>
+                                                                    <option value="03">March</option>
+                                                                    <option value="04">April</option>
+                                                                    <option value="05">May</option>
+                                                                    <option value="06">June</option>
+                                                                    <option value="07">July</option>
+                                                                    <option value="08">August</option>
+                                                                    <option value="09">September</option>
                                                                     <option value="10">October</option>
                                                                     <option value="11">November</option>
                                                                     <option value="12">December</option>
@@ -212,7 +212,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <input id="prod-control-input-submit" class="btn btn-primary" type="submit" onclick="submitProdControlForm()">
+                                                <input id="prod-control-input-submit" class="btn btn-primary"
+                                                       type="submit" onclick="submitProdControlForm()">
                                             </div>
                                         </div>
                                     </div>
@@ -220,8 +221,27 @@
                                         <div class="pd-20">
                                             <!-- Export Datatable start -->
                                             <div class="card-box mb-30">
-                                                <div class="pd-20">
+                                                <div class="pd-20 d-flex justify-content-between align-items-center">
                                                     <h4 class="text-blue h4">Monthly Report</h4>
+                                                    <div class="form-group">
+                                                        <label>
+                                                            <select id="prod-control-select-monthly-report"
+                                                                    class="form-control">
+                                                                <option value="01">January</option>
+                                                                <option value="02">February</option>
+                                                                <option value="03">March</option>
+                                                                <option value="04">April</option>
+                                                                <option value="05">May</option>
+                                                                <option value="06">June</option>
+                                                                <option value="07">July</option>
+                                                                <option value="08">August</option>
+                                                                <option value="09">September</option>
+                                                                <option value="10">October</option>
+                                                                <option value="11">November</option>
+                                                                <option value="12">December</option>
+                                                            </select>
+                                                        </label>
+                                                    </div>
                                                 </div>
                                                 <div class="pb-20">
                                                     <table
@@ -450,7 +470,6 @@
                     Design for Internal Use Only
                 </div>
             </div>
-
 
 
             <!-- success Popup html Start -->
