26th Commit - Production Control - Monthly Report Chart Fail-Safe
1. Initialize Monthly Chart with Loading Data as text & empty [] data.
2. Change to current month & update the chart with data loaded.
3. chart.updateOptions() -> In case of connection failure, update chart options with text "Unable to establish connection with Back-end REST API."

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/production-control.html
+++ b/production-control.html
@@ -543,13 +543,8 @@
 
 <!-- Apex JS -->
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<!-- KOH JS -->
 <script src="js/myjs/chart/prod-control-charts.js"></script>
-<!--<script src="js/myjs/chart/prod-dashboard-charts.js"></script>-->
-<!--<script src="vendors/scripts/apexcharts1-setting.js"></script>-->
-<!--<script src="vendors/scripts/apexcharts2-setting.js"></script>-->
-<!--            <script src="src/plugins/apexcharts/apexcharts.min.js"></script>-->
-
-
 <script src="js/myjs/api/api-helper.js"></script>
 <script src="js/myjs/form/validation-helper.js"></script>
 <script src="js/myjs/form/validate-prod-control-form.js"></script>
