--- a/production-control.html
+++ b/production-control.html
@@ -381,24 +381,25 @@
                                                         <thead>
                                                         <tr>
                                                             <th class="table-plus datatable-nosort"></th>
-                                                            <th>Jan</th>
-                                                            <th>Feb</th>
-                                                            <th>Mar</th>
-                                                            <th>Apr</th>
-                                                            <th>May</th>
-                                                            <th>Jun</th>
-                                                            <th>Jul</th>
-                                                            <th>Aug</th>
-                                                            <th>Sep</th>
-                                                            <th>Oct</th>
-                                                            <th>Nov</th>
-                                                            <th>Dec</th>
-                                                            <th>Total</th>
+                                                            <th class="text-center">Jan</th>
+                                                            <th class="text-center">Feb</th>
+                                                            <th class="text-center">Mar</th>
+                                                            <th class="text-center">Apr</th>
+                                                            <th class="text-center">May</th>
+                                                            <th class="text-center">Jun</th>
+                                                            <th class="text-center">Jul</th>
+                                                            <th class="text-center">Aug</th>
+                                                            <th class="text-center">Sep</th>
+                                                            <th class="text-center">Oct</th>
+                                                            <th class="text-center">Nov</th>
+                                                            <th class="text-center">Dec</th>
+                                                            <th class="text-center">Total</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
-                                                        <tr>
-                                                            <td class="table-plus">Est 20</td>
+                                                        <tr id="prod-control-table-est21">
+                                                            <td class="table-plus text-center">Est 21</td>
+<!--
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>300</td>
@@ -412,9 +413,11 @@
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>3780</td>
+-->
                                                         </tr>
-                                                        <tr>
-                                                            <td class="table-plus">Rea 20</td>
+                                                        <tr id="prod-control-table-rea21">
+                                                            <td class="table-plus text-center">Rea 20</td>
+<!--
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>300</td>
@@ -428,9 +431,11 @@
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>3780</td>
+-->
                                                         </tr>
-                                                        <tr>
-                                                            <td class="table-plus">Rea 19</td>
+                                                        <tr id="prod-control-table-rea20">
+                                                            <td class="table-plus text-center">Rea 19</td>
+<!--
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>300</td>
@@ -444,6 +449,7 @@
                                                             <td>300</td>
                                                             <td>330</td>
                                                             <td>3780</td>
+-->
                                                         </tr>
                                                         </tbody>
                                                     </table>
