--- a/form-corrugation.html
+++ b/form-corrugation.html
@@ -106,7 +106,7 @@
                     <ul class="submenu">
                         <li><a href="dashboard_pemasaran.html">Selling Dashboard</a></li>
                         <li><a href="form-pemasaran.html">Selling Form</a></li>
-                        <li><a href="selling_manager.html">Selling Control</a></li>
+                        <li><a href="selling-control.html">Selling Control</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
