--- a/selling-control.html
+++ b/selling-control.html
@@ -382,7 +382,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-body text-center font-18">
-                            <h3 class="mb-20">Connection Timed Out.</h3>
+                            <h3 class="mb-20">Target Already Exists.</h3>
                             <div class="mb-30 text-center"><img src="vendors/images/cross.png" alt="cross img.">
                             </div>
                             <p>Error: Target for the given Month & Year Already Exists.</p>
