35th Commit - Selling Dashboard - Chart 1 & 2
Pending:
1. Selling Status Table
2. User Access Management & Clean User Profile
3. Block direct access to html pages without authorization
4. Warehouse
Completed:
1. Selling Dashboard - Charts 1 & 2 are complete.
2. Removed Chart 3 & 4 - Percentage of Sales Amount with Monthly & Daily Target

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_gudang.html
+++ b/dashboard_gudang.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- Basic Page Info -->
@@ -28,6 +28,7 @@
 
 <body>
 
+<!--
     <div class="pre-loader">
         <div class="pre-loader-box">
             <div class="loader-logo"><img src="vendors/images/logo.jpg" alt=""></div>
@@ -40,6 +41,7 @@
             </div>
         </div>
     </div>
+-->
 
     <div class="header">
         <div class="header-left">
@@ -65,8 +67,7 @@
 
     <div class="left-side-bar">
 		<div class="brand-logo">
-			<a href="das
-            ">
+            <a href="dashboard.html">
 				<img src="vendors/images/logo.jpg" alt="" class="dark-logo">
 				<img src="vendors/images/logo.jpg" alt="" class="light-logo">
 			</a>
@@ -78,7 +79,7 @@
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
 						</a>
 						<ul class="submenu">
@@ -86,7 +87,7 @@
 						</ul>
 					</li>
                     <li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-edit2"></span><span class="mtext">Production</span>
 						</a>
 						<ul class="submenu">
@@ -97,7 +98,7 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-analytics-21"></span><span class="mtext">Selling</span>
 						</a>
 						<ul class="submenu">
@@ -107,7 +108,7 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-apartment"></span><span class="mtext">Warehouse</span>
 						</a>
 						<ul class="submenu">
