36th Commit - Selling Dashboard - Fix Loading Data text
Completed:
1. Show loading data in case of Server Down.

Pending:
1. Selling Status Table
2. User Access Management & Clean User Profile
3. Block direct access to html pages without authorization
4. Warehouse

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_pemasaran.html
+++ b/dashboard_pemasaran.html
@@ -248,6 +248,7 @@
     <script src="js/myjs/chart/sell-dashboard-charts.js"></script>
 
     <script src="js/myjs/api/api-helper.js"></script>
+    <script src="js/myjs/chart/chart-utility-helper.js"></script>
 
 </div>
 
