--- a/production-control.html
+++ b/production-control.html
@@ -417,6 +417,7 @@
 <script src="js/myjs/form/validation-helper.js"></script>
 <script src="js/myjs/form/validate-control-form.js"></script>
 <script src="js/myjs/chart/prod-control-charts.js"></script>
+<script src="js/myjs/chart/chart-utility-helper.js"></script>
 
 </body>
 
