38th Commit - Selling Dashboard - Status Table UI Update Row Content
Completed:
1. UI for Status Table in Selling Dashboard is ready to show data of 10 entries with select dropdown elements to update the status
2. Clicking on Save button fetches data from the changed rows which needs to be updated in the DB.
3. In case of Status = 'DONE', then Fade-out that row, populate that row with new row fetched from DB & fade-in the updated row.

Pending:
1. User Access Management & Clean User Profile
2. Main Dashboard
3. Warehouse
4. Print Btn. feature

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_pemasaran.html
+++ b/dashboard_pemasaran.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" type="text/css" href="src/plugins/datatables/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="vendors/styles/style.css">
 
+    <link rel="stylesheet" type="text/css" href="css/css/seller-dashboard.css">
+
 </head>
 
 <body>
@@ -252,6 +254,7 @@
 
     <script src="js/myjs/api/api-helper.js"></script>
     <script src="js/myjs/chart/chart-utility-helper.js"></script>
+    <script src="js/myjs/form/validation-helper.js"></script>
 
 </div>
 
